# HyperFurion-VK

./: .gitignore  LICENSE  README.md  ROADMAP.md  SPOKEN-INPUT-PROTOCOL.md  config.toml.example  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pages.yml  release.yml
docs/: compare.html  index.html  main.js  styles.css
docs/js/: autopilot.js  bus.js  checkout.js  config.js  cta.js  demo-relay.js  desktop.js  dictation.js  env.js  field.js  flow.js  hero2d.js  hints.js  hotkeys.js  lede.js  paint.js  pipeline.js  scope.js  scrollfx.js  signal.js  state.js  terminal.js  ticker.js  tts.js
gnome-shell/voice-keyboard-overlay@liam-hennigan/: extension.js  metadata.json
packaging/: DISTRIBUTION.md  install-hyperfurion-vk.sh
relay/: Dockerfile  README.md  fly.toml  pyproject.toml
relay/hyperfurion_relay/: __init__.py  admin.py  app.py  db.py  demo.py  mailer.py  stripe_webhook.py  tiers.py
relay/tests/: conftest.py  fake_xai.py  harness.py  test_auth.py  test_demo.py  test_e2e_daemon.py  test_relay.py
scripts/: train_kai_wakeword.py
tests/: conftest.py  test_ambient.py  test_assistant.py  test_client.py  test_code_registers.py  test_config.py  test_daemon.py  test_daemon_flow.py  test_dictionary.py  test_flow_engine.py  test_flow_grammar.py  test_flow_worker.py  test_focus_context.py  test_gnome_overlay.py  test_hotkey.py  test_imethod.py  test_injector.py  test_intent.py  test_ipc.py  test_login.py  test_macos.py  test_next_level.py  test_pending_rewrite.py  test_prefetch.py  test_stt.py  test_tts.py  test_wake.py  test_windows.py
voice_keyboard/: ambient.py  audio_capture.py  client.py  clipboard.py  config.py  daemon.py  dictionary.py  earcon.py  focusprobe.py  gui.py  history.py  hotkey.py  imethod.py  injector.py  ipc.py  llm.py  prefetch.py  recall.py  remotemic.py  stt.py  transcript.py  tts.py  wake.py
(+31 files in other folders)
