[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-keyboard"
# Bumping this on main cuts a GitHub release automatically (release.yml).
version = "2.1.2"
description = "Universal Linux voice keyboard with selectable speech providers"
requires-python = ">=3.11"
authors = [{name = "Liam Hennigan"}]
license = {file = "LICENSE"}
dependencies = [
    "evdev>=1.6; sys_platform == 'linux'",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pyaudio>=0.2",
    "requests>=2.28",
    "websockets>=12.0",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
pygame = ["pygame>=2.5"]
# Wake word "Kai" — a local openWakeWord detector (opt-in; [wake] off by
# default). Pulls onnxruntime/tflite, so it stays out of the base install.
wake = ["openwakeword>=0.6"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[project.scripts]
voice-keyboard = "voice_keyboard.client:main"
voice-keyboard-daemon = "voice_keyboard.daemon:main"

[tool.setuptools.packages.find]
include = ["voice_keyboard*"]
